# rust-webgpu-playground

./: Cargo.toml  README.MD  build.rs
src/: challenge.frag  challenge.rs  challenge.vert  challenge.vert.spv  main.rs  shader.frag  shader.vert  shader.wgsl  texture.rs
