[package]
name = "wgpu-basics"
version = "0.1.0"
authors = ["Nick  Tom Thomas <nickbetty2000@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
winit = "0.22"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }



[dependencies.wgpu]
version = "0.7"
features = ["vulkan-portability"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"
